@@ -9,12 +9,12 @@ mysqlclient >= 1.3.12
 pymongo >= 3.7.0
 mmcif >= 0.70
 rcsb.utils.config >= 0.35
-rcsb.utils.io >= 1.15
+rcsb.utils.io >= 1.16
 rcsb.utils.multiproc >= 0.18
-rcsb.utils.chemref >= 0.77
+rcsb.utils.chemref >= 0.78
 scandir; python_version < "3.0"
 configparser; python_version < "3.0"
-rcsb.utils.dictionary >= 0.51
+rcsb.utils.dictionary >= 0.58
 rcsb.utils.repository >= 0.16
 #
 SQLAlchemy; sys_platform == 'linux'
